kubernetes/manifests/generated/production/infrastructure/argocd-controller/1-manifest/ingress-argocd-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"labels":{"app.kubernetes.io/component":"server","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"argo-cd","helm.sh/chart":"argo-cd-3.1.12"},"name":"argocd-server","namespace":"argocd"},"spec":{"ingressClassName":"nginx","rules":[{"host":"https://90ebae0a-60a8-4b2a-9353-c0ccf3041608.eu-central-1.linodelke.net:443","http":{"paths":[{"backend":{"service":{"name":"argocd-se [...]
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: argo-cd
    helm.sh/chart: argo-cd-3.1.12
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: https://90ebae0a-60a8-4b2a-9353-c0ccf3041608.eu-central-1.linodelke.net:443
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /tools/argocd
        pathType: Prefix
